create html for footer

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 			</li>
 		</ul>
 	</nav>
+
+	<footer>
+		<div class="share">
+			<a href="#">SHARE</a>
+			<a href="#">FACEBOOK</a>
+			<a href="#">TWITTER</a>
+  </div>
+</footer>
 	<script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
