add html for content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 			</li>
 		</ul>
 	</nav>
-
+	<section>
+		<p class="rouge" > Voici du texte en rouge </p>
 	<footer>
 		<div class="share">
 			<a href="#">SHARE</a>
