add class in li

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<nav class="navbar">
 		<ul class="nav-tabs">
-			<li>
+			<li class="">
 				<a href="#">Accueil</a>
 			</li>
 			<li class="nav-hover-container">
